--- a/day01a/Cargo.toml
+++ b/day01a/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 
 [lib]
 path = "src/main.rs"
+
+[features]
+unstable-features = []
+
+[dependencies]
+cfg-if = "1.0"
+
+[build-dependencies]
+rustc_version = "0.4.0"
